--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 闫肃的博客
-email: suyan0830@gmail.com
+title: Jasper's Blog
+email: jiangweiqi0309@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  闫肃的博客
+  Jasper's Blog
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://yansu.org # the base hostname & protocol for your site
+url:  # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
-author: Su Yan
+author: Jiang Weiqi
 
 # Sidebar filter
 # Choose 'tag' or 'category' as filter in sidebar.
@@ -14,11 +14,11 @@ filter: 'category'
 recent_num: 20
 
 # Social account
-twitter: suyan404
-weibo: suyan0830
-github: suyan
-instagram: suyan404
-linkedin: suyan404
+twitter: 
+weibo: 
+github: weiqi-jiang
+instagram: 
+linkedin: 
 
 # avatar and Favicon
 avatar: http://imgs.yansu.org/site-avatar.png
