--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ instagram:
 linkedin: 
 
 # avatar and Favicon
-avatar: http://imgs.yansu.org/site-avatar.png
+avatar: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/site-avatar.jpg?raw=true
 favicon: http://imgs.yansu.org/site-favicon.ico
 
 # disqus config
