--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin:
 
 # avatar and Favicon
 avatar: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/site-avatar.jpg?raw=true
-favicon: http://imgs.yansu.org/site-favicon.ico
+favicon: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/avatar_small.jpg?raw=true
 
 # disqus config
 disqus:
