--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ instagram:
 linkedin: 
 
 # avatar and Favicon
-avatar: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/site-avatar.jpg?raw=true
+avatar: https://raw.githubusercontent.com/weiqi-jiang/weiqi-jiang.github.io/master/pic/site-avatar2.jpg
 favicon: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/avatar_small.jpg?raw=true
 
 # disqus config
