--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ linkedin:
 
 # avatar and Favicon
 avatar: https://raw.githubusercontent.com/weiqi-jiang/weiqi-jiang.github.io/master/pic/site-avatar2.jpg
-favicon: https://github.com/weiqi-jiang/weiqi-jiang.github.io/blob/master/pic/avatar_small.jpg?raw=true
+favicon: https://raw.githubusercontent.com/weiqi-jiang/weiqi-jiang.github.io/master/pic/site-avatar2.jpg
 
 # disqus config
 disqus:
