--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ ga:
 permalink: /:year/:month/:day/:title.html
 markdown: kramdown
 highlighter: rouge
-mathjax: disabled
+mathjax: enabled
 sass:
   style: compressed
 
