测试行内公式显示问题

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ markdown: kramdown
 kramdown: 
     math_engine: katex
 highlighter: rouge
-mathjax: disabled
+mathjax: enabled
 sass:
   style: compressed
 
